error handling fixed
